<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">擦肩</string>
    <string name="app_slogan">寻找身边最熟悉的陌生人</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">登录</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="error_password_null">密码不能为空</string>
    <string name="error_username_null">用户名不能为空</string>
    <string name="error_comfirm_password">输入的两次密码不一致</string>
    
    <string name="title_activity_register">用户注册</string>
 	<string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="login_email_hint">请在此输入密码&#8230;</string>
    
    <string name="main_tab_shoudle">擦肩</string>
    <string name="main_tab_message">消息</string>
    <string name="main_tab_found">发现</string>
    <string name="main_tab_profile">个人</string>
    
</resources>
