<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background_color"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/Register_Input" >

        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_account"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            style="@style/Register_Edit"
            android:hint="@string/login_username_hint" />

    </LinearLayout>

    <LinearLayout
        style="@style/Register_Input" >

        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_pwd"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Register_Edit"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        style="@style/Register_Input" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_email"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            style="@style/Register_Edit"
             android:inputType="textPassword"
            android:hint="@string/login_email_hint" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_common_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>