<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:background="@color/common_background_color"
        android:layout_height="fill_parent" />
    
    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_shoudle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/main_tab_shoudle_btn"
                android:background="@color/white"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_shoudle"
                android:textColor="@drawable/main_tab_text_color"
                android:textSize="12sp" />
            
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_found"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/main_tab_found_btn"
                android:background="@color/white"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_found"
                android:textColor="@drawable/main_tab_text_color"
                android:textSize="12sp" />

        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/main_tab_message_btn"
                android:background="@color/white"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_message"
                android:textColor="@drawable/main_tab_text_color"
                android:textSize="12sp" />

        </RelativeLayout>
        
        <Button
            android:id="@+id/btn_profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/main_tab_profile_btn"
            android:background="@color/white"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/main_tab_profile"
            android:textColor="@drawable/main_tab_text_color"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>